@@ -1,5 +1,11 @@
 2013-04-28 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/main.c,
+	  src/stm8/gen.c:
+	  STM8: Implement multiplication.
+
+2013-04-28 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/stm8/gen.c:
 	  STM8: Fix asmop freeing for GET_VALUE_AT_ADDRESS, do not share smybol aops to fix double free, fix large comparison, implement bit-field writes.
 
